做Java8的适配